requirements.txt refactor settings.ini

--- a/azure_scripts/settings.ini.template
+++ b/azure_scripts/settings.ini.template
@@ -1,4 +1,8 @@
 [azure-blob]
-
+STORAGE_NAME = ''
+STORAGE_KEY = ''
+CONTAINER_NAME = ''
+TARGET_FOLDER_NAME = ''
+LOCAL_FILE_PATH = ''
 
 [azure-sql]
